# algodata

./: .clang-format  CMakeLists.txt
include/: testing.hpp
include/datastructures/: linkedlist.hpp  node.hpp  queue.hpp  stack.hpp
include/linkedlists/: linkedlist.hpp  node.hpp
include/trees/: bst.hpp  tree.hpp
tests/: bst_test.cpp  linkedlist_test.cpp  main.cpp  queue_test.cpp  stack_test.cpp
